# gooroom-usbctl

./: README.md  makemo  meson.build
debian/: changelog  control  debhelper-build-stamp  files  install  rules
debian/gooroom-usbctl/DEBIAN/: control  md5sums
po/: LINGUAS  en.po  ko.po  meson.build
resources/: gooroom-usbctl.ui
src/: gooroom-usbctl-application.c  gooroom-usbctl-main.c  gooroom-usbctl-util.c  gooroom-usbctl-util.h  gooroom-usbctl-window.c  gooroom-usbctl-window.h
